--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/iamges/c1.jpg" class="d-block w-100" alt="...">
+            <img src="c1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/iamges/c2.jpg" class="d-block w-100" alt="...">
+            <img src="c2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/iamges/c3.jpg" class="d-block w-100" alt="...">
+            <img src="c3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -154,7 +154,7 @@
       <div class="container">
         <div class="row getstart-row ">
           <div class="col-lg-6">
-            <img class="getstart-img" src="/iamges/devices.png" alt="">
+            <img class="getstart-img" src="devices.png" alt="">
           </div>
           <div class=" des-col col-lg-6">
             <h2> connect all your devices and access super fast internet with ease</h2>
@@ -174,7 +174,7 @@
             <button type="button" class="btn btn-outline-danger">get started</button>
           </div>
           <div class="col-lg-6">
-            <img src="/iamges/customer-support.webp" alt="" class="getstart-img">
+            <img src="customer-support.webp" alt="" class="getstart-img">
             
           </div>
           
